tooling/nargo_cli/tests/snapshots/execute__tests__compile_success_empty_brillig_slice_input_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9084184003198307343",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/+1ZWYsTQRDubCbJTo5N0J8hyEyO3Y0gLMuusg8iKyqCIIw5HsQXBUHwZQTBv216rTLf1FTu6XWPbgjd01Vdx1d9patk8qU0+wVmvbJH9XeqQ9FvZZVnvxP6jnYrcQhyi5Z/HPWT0OSxKND+XggyHcgfhCJ+BcuPaiTnLM3KN0JvWfBpY1rULpk8D/vhYh7N4uwap5jlV93I7zFuFcCurPjE+lsmGyuma7Ux2ZgaoatunM7heJlvaD/PjY7glxgsklXZUNb/jCliXRX21NzYE7H8fUfy2d9Q8RfXfU3423BjT5/XSB3sKQndTTe6B+uuQdZfF7a6WoNNk48N4sNxajFPOrcnFLQgzfvBtArQOL523j0C/5CG9uBa5bnaMfm5Uged2tnCOg+hfQRjbLlIs/YY4/ysGjq+M8QPl+DBPtZSk8H9qoY+jh/jtI/8ghYCLUizeur0HYAelMV2VAT/gL7bVFdhDI/vKPqrQn/GbqUPMZKyykof89s9+zG1G/Sz8+sz9fGcxHv3Jucz6uL5gufICdXRjqVj8udrZYFeV+dRVfhekPzY8XnadXyexvKOh7GwmJ1CP+7PFaPfM0pAR/7nIPOc2m0xBudIQ5FxQbXF4iu1HZ+xvWVnCK7rpsBAOwPlHQQxCBVZ8m4hY/NS6GT5GBscWwM68r8Bma+ETO2ehfHeF7YiLQS5p8JfxELeu9n/vRV+cOwPgFbk3Y7taQNuZZOP9wHQkf891Rajb8JHHmNAJmK9J/jbCj/6zfYwvi2gtdfQjf5wTENlvAt8O4Cf5hvij/wjqjV8NbyW4dtR+NFvtqet4IVjJb4yFk1Bk98NRY52fsr9RtufcM3IdVpXdOKewlgF6ZyvqNgfHf/9H3dlK8nn2MsSAB35v9A3+sF1sIOd06MknvaSaTJIxuP+KHkg5NvCc6fhQP9ocPhx1B8k0SS2n93r1j85Ho6j4XSSxHHcHUeTVfp/U/uWv+FObvkb7tC/4a4u1/CG2/VvuFsX/4a7xG/U799w/RvuXX/DfQL+IQ3t2fQN1/G66bt+q/Hr5l/x6wZortfNqtzHObSfwRhbXqRZe4xxfscb+9zHnH9R7uOMvm9y7uMptTH38YP6fO5jdfG5j+X2r8p9XEI/7s+b5j7egszX1N409/GOaovFT2rf59zHB6Fz29zHGGQmQmZRuY9L4e99yH18otpi9Ev46HMfu+c+OP+p4etzH9vlPnhPuem5D6p87qNg/ZvmPv4AsqlPywgvAAA=",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "sum_slice",
    "sum_slice"
  ]
}
